# rnaseqtools

./: .gitignore  MANIFEST.in  README.md  biomart_mapping.py  kallisto_bus.py  kallisto_em.py  pyBowtie.py  pyHISAT.py  pyKallisto.py  pyproject.toml  rnasequtils.py  setup.py  setup.py.bak
rnaseqtools/: biomart_mapping.py  fastqio.py  kallisto_bus.py  logos.py  luigi_tasks.py  pybustools.py  rnasequtils.py
rnaseqtools/seqerrors/: CB_errors.py  rust.py  transcript_errors.py  umi_errors.py  utils.py
rnaseqtools/wrappers/: pyHISAT.py  pyKallisto.py  pySleuth.py
